crates/test-ui/ui/msg_send_id_alloc_init_different.stderr
error[E0271]: type mismatch resolving `<Id<AnyObject> as MaybeUnwrap>::Input == Option<Id<NSObject>>`
 --> ui/msg_send_id_alloc_init_different.rs
  |
  |     let _: Id<AnyObject> = unsafe { msg_send_id![obj, init] };
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<Id<NSObject>>`, found `Option<Id<AnyObject>>`
  |
  = note: expected enum `Option<Id<NSObject>>`
             found enum `Option<Id<AnyObject>>`
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |                                                                   ^^^^^^^^^ required by this bound in `MsgSendId::send_message_id`
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
